sort.basic.lessons.sort.basic.bubble.AlgBubbleSort1.scala.code
def bubbleSort()  {
	var chgtfait : Boolean = true
	while (chgtfait = false){
		for(i<- 0 to getNombreValeurs()-2){
			if (plusPetitQue(i,i+1)){
				echange(i, i+1)
				chgtfait = true
			}
		
		}
	}
}
